# sqlvisual

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: analytics.py  health.py
backend/app/core/: config.py  exceptions.py  handlers.py  logging.py
backend/app/db/: redis.py  session.py
backend/app/middleware/: request_context.py
backend/app/models/: __init__.py  analytics.py
backend/app/schemas/: agent.py  error.py  health.py
backend/app/services/: agents.py  health.py  sql_assistant.py
backend/app/services/agents/: __init__.py  callbacks.py  prompts.py  sql_agent.py  tools.py
backend/app/utils/: trace.py
backend/tests/: test_health.py  test_sql_agent_tools.py
docs/: database.md
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/dashboard/: chat-panel.tsx  dashboard-header.tsx  sidebar.tsx  sql-preview-panel.tsx
frontend/src/components/ui/: button.tsx
infra/postgres/init/: 001_extensions_and_schemas.sql  001_init.sql  002_analytics_platform.sql  003_northwind_schema.sql  004_northwind_seed.sql  005_indexes_and_views.sql  006_schema_metadata_seed.sql  007_sample_analytics_queries.sql
infra/postgres/queries/: customer_lifetime_revenue.sql  monthly_revenue_by_category.sql  top_products_by_revenue.sql
(+2 files in other folders)
